# src/routers/auth.js
@@ -8,12 +8,16 @@ import {
   refreshController,
   getOauthController,
   confirmOauthController,
+  resetPasswordController,
+  requestPasswordController,
 } from '../controllers/auth.js';
 import { validateBody } from '../middlewares/validate-body.js';
 import {
   registerSchema,
   loginSchema,
   confirmOauthSchema,
+  resetPasswordSchema,
+  requestPasswordSchema,
 } from '../validation/auth.js';
 
 const router = express.Router();
@@ -44,6 +48,20 @@ router.post(
   jsonParser,
   validateBody(confirmOauthSchema),
   ctrlWrapper(confirmOauthController),
+);
+
+router.post(
+  '/send-reset-email',
+  jsonParser,
+  validateBody(resetPasswordSchema),
+  ctrlWrapper(resetPasswordController),
+);
+
+router.post(
+  '/reset-pwd',
+  jsonParser,
+  validateBody(requestPasswordSchema),
+  ctrlWrapper(requestPasswordController),
 );
 
 export default router;
